# secure-agentic-cloudops-siem-platform

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
docs/: VS_CODE_SETUP.md
observability/grafana/provisioning/dashboards/: siem-overview.json
observability/prometheus/: prometheus.yml
scripts/: init_db.sql  reset_all.sh  run_all.sh  seed_sample_events.py  stop_all.sh
services/agentic-engine/: Dockerfile  pyproject.toml
services/agentic-engine/app/: main.py  triage.py
services/agentic-engine/tests/: test_triage.py
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: auth.py  main.py  rate_limit.py
services/api-gateway/tests/: test_auth.py
services/dashboard-service/: Dockerfile  pyproject.toml
services/dashboard-service/app/: main.py
services/dashboard-service/app/static/: style.css
services/dashboard-service/app/templates/: dashboard.html
services/dashboard-service/tests/: test_dashboard.py
services/detection-service/: Dockerfile  README.md  pyproject.toml
services/detection-service/app/: main.py  rules.py
services/detection-service/tests/: test_rules.py
services/ingest-service/: Dockerfile  README.md  pyproject.toml
services/ingest-service/app/: main.py
services/ingest-service/tests/: test_ingest.py
services/remediation-service/: Dockerfile  pyproject.toml
services/remediation-service/app/: main.py  workflows.py
services/remediation-service/tests/: test_workflows.py
services/vector-kb/: Dockerfile  pyproject.toml
services/vector-kb/app/: main.py  store.py
services/vector-kb/tests/: test_vector.py
