[tool.poetry]
name = "secure-agentic-cloudops-siem-platform"
version = "0.1.0"
description = "Streaming detection + RAG investigation + governed agentic remediation + ITSM (ServiceNow)"
authors = ["Virinchi <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
black = "^24.8.0"
pytest = "^8.3.2"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]
