[tool.poetry]
name = "dashboard_service"
version = "0.1.0"
description = "SIEM Dashboard — web UI for visualizing alerts and events"
authors = ["Virinchi"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
jinja2 = "^3.1.4"
httpx = "^0.27.0"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
black = "^24.8.0"
pytest = "^8.3.2"
httpx = "^0.27.0"
anyio = {extras = ["trio"], version = "^4.4.0"}
pytest-anyio = "*"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]
